--- a/index_Jayne.html
+++ b/index_Jayne.html
@@ -35,6 +35,7 @@
             font-size: 60px; 
             font-weight: bold; 
             position:relative;
+            top:-100px;
         };
 
     </style>
