--- a/index.html
+++ b/index.html
@@ -484,35 +484,35 @@
     // START
     timeline.push(welcome);
 
-    // // CONSENT FORMS and INSTRUCTIONS
-    // timeline.push(info_sheet);
-    // timeline.push(consent);
-    // timeline.push(instructions);
+    // CONSENT FORMS and INSTRUCTIONS
+    timeline.push(info_sheet);
+    timeline.push(consent);
+    timeline.push(instructions);
 
-    // // EYE TRACKER
-    // timeline.push(camera_instructions);
-    // timeline.push(init_camera);
-    // timeline.push(calibration_instructions);
-    // timeline.push(calibration);
-    // timeline.push(validation_instructions);
-    // timeline.push(validation);
-    // timeline.push(recalibrate);
-    // timeline.push(calibration_done);
+    // EYE TRACKER
+    timeline.push(camera_instructions);
+    timeline.push(init_camera);
+    timeline.push(calibration_instructions);
+    timeline.push(calibration);
+    timeline.push(validation_instructions);
+    timeline.push(validation);
+    timeline.push(recalibrate);
+    timeline.push(calibration_done);
 
-    // timeline.push(enter_fullscreen);
+    timeline.push(enter_fullscreen);
 
-    // // PRACTICE TRIAL 
-    // timeline.push(practice_instructions);
-    // timeline.push(practice_procedure);
+    // PRACTICE TRIAL 
+    timeline.push(practice_instructions);
+    timeline.push(practice_procedure);
     
     // START TASK
     timeline.push(start_task);
 
-    // // NEUTRAL NO FEEDBACL
-    // timeline.push(neutral_block);
-    // timeline.push(test_neutral_without_feedback);
-    // timeline.push(end_questions);
-    // timeline.push(emotions_questions);
+    // NEUTRAL NO FEEDBACL
+    timeline.push(neutral_block);
+    timeline.push(test_neutral_without_feedback);
+    timeline.push(end_questions);
+    timeline.push(emotions_questions);
 
     // NEGATIVE WITH FEEDBACK
     timeline.push(negative_block);
