adding Jayne suggestions

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script src="stimuli.js"></script>
     <script src="webcam.js"></script>
     <script src="consent.js"></script>
+    <script src="general_instructions.js"></script>
     <script src="info_sheet.js"></script>
     <script src="end_block.js"></script>
     <script src="debrief_sheet.js"></script>
@@ -487,6 +488,7 @@
     // CONSENT FORMS and INSTRUCTIONS
     timeline.push(info_sheet);
     timeline.push(consent);
+    timeline.push(general_instructions);
     timeline.push(instructions);
 
     // EYE TRACKER
